--- a/beamerfontthemerikako.sty
+++ b/beamerfontthemerikako.sty
@@ -8,4 +8,4 @@
 \setmathfont{STIX Two Math}
 \setmonofont{JetBrainsMono}
 \setmonojfont{SourceHanCodeJP}
- \AtBeginBibliography{\small \fontspec{Times New Roman}\jfontspec{HiraMinProN-W3}}
+% \AtBeginBibliography{\small \fontspec{Times New Roman}\jfontspec{HiraMinProN-W3}}
