--- a/beamerinnerthemerikako.sty
+++ b/beamerinnerthemerikako.sty
@@ -51,12 +51,12 @@
 % relaxはなにもしない命令
 \let\footnoterule\relax
 
-\newcommand{\colorhref}[2]{\href{#1}{\color{link}{#2}}}
+% \newcommand{\colorhref}[2]{\href{#1}{\color{link}{#2}}}
 
 % Bibliography
-\setbeamertemplate{bibliography item}{\insertbiblabel}
-\setbeamercolor{bibliography entry author}{fg=primary}
-\setbeamercolor{bibliography entry title}{fg=primary}
-\setbeamercolor{bibliography entry location}{fg=primary}
-\setbeamercolor{bibliography entry note}{fg=primary}
-\setbeamercolor{bibliography item}{fg=primary}
+% \setbeamertemplate{bibliography item}{\insertbiblabel}
+% \setbeamercolor{bibliography entry author}{fg=primary}
+% \setbeamercolor{bibliography entry title}{fg=primary}
+% \setbeamercolor{bibliography entry location}{fg=primary}
+% \setbeamercolor{bibliography entry note}{fg=primary}
+% \setbeamercolor{bibliography item}{fg=primary}
