--- a/beamerthemerikako.sty
+++ b/beamerthemerikako.sty
@@ -14,6 +14,7 @@
 % mathrm=symがないと数式中\sinがLMになった。mainfontと同じになるらしい
 % mathrm=sym,mathup=sym,mathit=sym,mathsf=sym,mathbf=sym,mathtt=sym
 \RequirePackage[mathrm=sym]{unicode-math}
+\usepackage[backend=biber, style=ieee]{biblatex}
 %\RequirePackage{amsmath}
 \useoutertheme{rikako}
 \useinnertheme{rikako}
