make title blue

--- a/beamercolorthemerikako.sty
+++ b/beamercolorthemerikako.sty
@@ -4,7 +4,7 @@
 \definecolor{background}{HTML}{F2F1F1}
 \definecolor{header-bg}{HTML}{005396}
 \definecolor{header-fg}{HTML}{ffffff}
-\definecolor{highlight}{HTML}{6DABE4}
+\definecolor{highlight}{HTML}{005396}
 \definecolor{link}{HTML}{6DABE4}
 % Frame
 \setbeamercolor{normal text}{fg=primary, bg=background}
