--- a/beamerinnerthemerikako.sty
+++ b/beamerinnerthemerikako.sty
@@ -1,14 +1,14 @@
 % Title page
 \setbeamertemplate{title page} {
   \vspace{0.4\paperheight}
-  {\Large \inserttitle}
+  {\Large \textcolor{highlight}{\inserttitle}}
   \par
   \vspace{0.3\paperheight}
   \begin{flushright}
-    \insertauthor
+    \textcolor{highlight}{\insertauthor}
     \par
     \vspace{0.020\paperheight}
-    \insertdate
+    \textcolor{highlight}{\insertdate}
     \par
   \end{flushright}
 }
