--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
 \title{runcのUNIXプログラミング}
-% \author{\texttt{ryotaro612}} 
+\author{\texttt{ryotaro612}} 
 \begin{document}
 \begin{frame}[noframenumbering, plain]
 \titlepage
