--- a/main.tex
+++ b/main.tex
@@ -13,13 +13,18 @@
 \usetheme{rikako}
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
-\title{runcのUNIXプログラミング}
+\title{はじめての集合・証明・型の歴史}
 \author{\texttt{ryotaro612}} 
 \begin{document}
 \begin{frame}[noframenumbering, plain]
 \titlepage
 \end{frame}
 \section{導入}
+\begin{frame}
+  \frametitle{ねらい}
+  初期の素朴な集合論の成り立ちから
+\end{frame}
+  
 % https://fair-use.org/bertrand-russell/the-principles-of-mathematics/s498
 % https://plato.stanford.edu/entries/type-theory/
 % https://people.umass.edu/klement/pom/pom-portrait.pdf
