--- a/beamerouterthemerikako.sty
+++ b/beamerouterthemerikako.sty
@@ -3,7 +3,7 @@
 \setbeamertemplate{frametitle}{
   \nointerlineskip % ヘッダの上の小さい白を消す
   \begin{beamercolorbox}[wd=\paperwidth,dp=0.05\paperheight, ht=0.09\paperheight, leftskip=0.05\paperwidth, rightskip=0.05\paperwidth]{frametitle}
-    \insertframetitle
+    \large{\insertframetitle}
   \end{beamercolorbox}
 }
 % ページをまたぐ場合に、表題の末尾にインデックスをつけない
