--- a/beamerfontthemerikako.sty
+++ b/beamerfontthemerikako.sty
@@ -5,6 +5,7 @@
 %\renewcommand{\kanjifamilydefault}{\gtdefault}
 %\renewcommand{\emph}[1]{{\upshape\bfseries #1}}
 \setmainjfont{Hiragino Sans}
+% \setmainjfont{A-OTF Shin Go Pro}
 \setmathfont{STIX Two Math}
 \setmonofont{JetBrainsMono}
 \setmonojfont{SourceHanCodeJP}
