--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usetheme{rikako}
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
-\title{はじめての集合・証明・型の歴史}
+\title{型理論がうまれた背景}
 \author{\texttt{ryotaro612}} 
 \begin{document}
 \begin{frame}[noframenumbering, plain]
@@ -22,8 +22,15 @@
 \section{導入}
 \begin{frame}
   \frametitle{ねらい}
-  初期の素朴な集合論の成り立ちから
+  \large
+  型理論ができた背景から、近い分野に興味をもってもらう
+  \normalsize
 \end{frame}
+\section{幾何学の起源}
+\begin{frame}
+\end{frame}
+\section{論理学}
+\section{型}
   
 % https://fair-use.org/bertrand-russell/the-principles-of-mathematics/s498
 % https://plato.stanford.edu/entries/type-theory/
