--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usetheme{rikako}
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
-\title{型理論がうまれた背景}
+\title{型理論ができるまで}
 \author{\texttt{ryotaro612}} 
 \begin{document}
 \begin{frame}[noframenumbering, plain]
@@ -21,13 +21,52 @@
 \end{frame}
 \section{導入}
 \begin{frame}
-  \frametitle{ねらい}
-  \large
-  型理論ができた背景から、近い分野に興味をもってもらう
-  \normalsize
+  \frametitle{資料の目的}
+  {\large 型理論に近い分野への関心のきっかけをつくる}
 \end{frame}
-\section{幾何学の起源}
+\section{幾何学}
 \begin{frame}
+  \frametitle{ギリシアで発展した幾何学}
+  {\large 幾何学は定理を証明することで発展した}
+  定理を演繹で証明して発展させた
+  公理からの演繹
+  % タレス、ピタゴラス、プラトンアカデメイア、アリストテレス
+  % アルキメデス 有理数
+  % 球体
+  % ロバチェフスキー
+  % 公準
+  % 素朴集合論
+  % 双曲平面橋爪
+\end{frame}
+\begin{frame}
+  \frametitle{ユークリッドの原論}
+  {\large 原論は、定義、公理、公準、命題、証明を分けた}
+  % ユークリッドはギリシア数学の知識を5つの公準から
+\end{frame}
+\begin{frame}
+  \frametitle{5つの公準}
+  {\large 5番目の平行線の公準はほかよりも複雑}
+\end{frame}
+\begin{frame}
+  \frametitle{公準5の別名は平行線公理}
+  {\large 任意の直線とその直線外の任意の一点があるとき、その一点を通りその直線に平行な直線は1本だけ}
+\end{frame}
+\begin{frame}
+  \frametitle{平行線公理への疑問}
+  {\large 平行線公理は必要な公準か}
+  たんなる仮説なのか
+  ほかの公準から導出できるか
+% 直線$l$上にない任意の点$P$を通る直線$l$の平行線は2本以上ある
+\end{frame}
+\begin{frame}
+  \frametitle{例 球面幾何学の平行線}
+  {\large 測地線があたえられるとき、その測地線にない点pをとおり測地線と交わらない測地線はない}
+  たんなる仮説なのか
+  ほかの公準から導出できるか
+\end{frame}
+\begin{frame}
+  \frametitle{非ユークリッド幾何学の発見の影響}
+  「正しさ」は仮定した公理から作りだすものになる
 \end{frame}
 \section{論理学}
 \section{型}
