--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usetheme{rikako}
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
-\title{型理論ができるまで}
+\title{型理論のはじまり}
 \author{\texttt{ryotaro612}} 
 \begin{document}
 \begin{frame}[noframenumbering, plain]
@@ -66,19 +66,49 @@
 \end{frame}
 \begin{frame}
   \frametitle{非ユークリッド幾何学の発見の影響}
-  「正しさ」は仮定した公理から作りだすものになる
+  {\large 「正しさ」は仮定した公理から作りだすもの}
 \end{frame}
-\section{論理学}
-\section{型}
-  
+\section{素朴な集合論と記号論理学}
+\begin{frame}
+  \frametitle{ものの集まりで数学を考える}
+  {\large いろんな数学の概念を集合で定義できる}
+\end{frame}
+\begin{frame}
+  \frametitle{算術の基礎}
+  {\large フレーゲは記号論理学と集合論による自然数の公理と定理の提供を試みた}
+\end{frame}
+\begin{frame}
+  \frametitle{思考を計算するための記号}
+  {\large 推論の規則を記号を操作する計算に還元する考えは世紀以前からある}
+\end{frame}
+\begin{frame}
+  \frametitle{ブールの論理代数}
+  {\large ブールは命題に出現する個体の集合を記号で表した}
+  % https://archive.org/stream/THELAWSOFTHOUGHTGeorgeBoole/THE%20LAWS%20OF%20THOUGHT_George%20Boole_djvu.txt
+\end{frame}
+\begin{frame}
+  \frametitle{推論規則の例}
+  {\large 命題論理は、命題と論理結合子からなる論理体系}
+\end{frame}
+\begin{frame}
+  \frametitle{概念記法}
+  {\large フレーゲは述語の言明を形式化した}
+\end{frame}
+\begin{frame}
+  \frametitle{ラッセルのパラドクス}
+  {\large 集合の集合を考えると矛盾がおきる}
+\end{frame}
+\begin{frame}
+  \frametitle{型の概念}
+  ラッセルの自分自身に言明する述語の例に対して、フレーゲは述語は述語を引数にとれないと回答した
+
+  ただし述語の外延が作用する
+\end{frame}
 % https://fair-use.org/bertrand-russell/the-principles-of-mathematics/s498
 % https://plato.stanford.edu/entries/type-theory/
 % https://people.umass.edu/klement/pom/pom-portrait.pdf
 % https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/151121/1/ronso38_S49_type.pdf
 % https://www.britannica.com/topic/theory-of-types-logic
-\begin{frame}[t]
-  \frametitle{runc}
-\end{frame}
 \begin{frame}[allowframebreaks,t]
   \frametitle{参考資料}  
   \printbibliography
