--- a/beamerthemetitech.sty
+++ b/beamerthemetitech.sty
@@ -15,9 +15,9 @@
 % mathrm=sym,mathup=sym,mathit=sym,mathsf=sym,mathbf=sym,mathtt=sym
 \RequirePackage[mathrm=sym]{unicode-math}
 \usepackage[backend=biber, style=ieee]{biblatex}
-%\RequirePackage{amsmath}
-\useoutertheme{rikako}
-\useinnertheme{rikako}
-\usefonttheme{rikako}
-\usecolortheme{rikako}
+% \RequirePackage{amsmath}
+\usecolortheme{titech}
+\usefonttheme{titech}
+\useoutertheme{titech}
+\useinnertheme{titech}
 \mode<all>
