--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 % ptは細かい指定はできないらしい
 % チートシート
 % https://www.cpt.univ-mrs.fr/~masson/latex/Beamer-appearance-cheat-sheet.pdf
-\documentclass[unicode, 14pt, aspectratio=169]{beamer} 
+\documentclass[unicode, 14pt, aspectratio=169]{beamer}
 % \usepackage{listings}
 % \usepackage{enumitem}
 % \usepackage{xcolor}
@@ -10,7 +10,7 @@
 % styleはここで指定できる
 % スタイルの一覧
 % https://www.overleaf.com/learn/latex/Biblatex_bibliography_styles
-\usetheme{rikako}
+\usetheme{titech}
 \date{\number\year 年\number\month 月\number\day 日}
 \addbibresource{main.bib}
 \title{型理論のはじまり}
@@ -24,7 +24,7 @@
   \frametitle{資料の目的}
   {\large 型理論に近い分野への関心のきっかけをつくる}
 \end{frame}
-\section{幾何学}
+\section{非ユークリッド幾何学の発見}
 \begin{frame}
   \frametitle{ギリシアで発展した幾何学}
   {\large 幾何学は定理を証明することで発展した}
