--- a/beamerfontthemetitech.sty
+++ b/beamerfontthemetitech.sty
@@ -9,4 +9,5 @@
 \setmathfont{STIX Two Math}
 \setmonofont{JetBrainsMono}
 \setmonojfont{SourceHanCodeJP}
-% \AtBeginBibliography{\small \fontspec{Times New Roman}\jfontspec{HiraMinProN-W3}}
+% 参考文献の文字を小さくする
+\AtBeginBibliography{\small \fontspec{Times New Roman}\jfontspec{HiraMinProN-W3}}
