--- a/beamerinnerthemetitech.sty
+++ b/beamerinnerthemetitech.sty
@@ -46,17 +46,13 @@
 % キャプションと図や表の間隔を小くする 0ptでもくっつかない
 \setlength{\abovecaptionskip}{0pt}
 
-% https://tex.stackexchange.com/questions/96501/what-does-relax-do
-% footnoteの上のruleを消す
-% relaxはなにもしない命令
-\let\footnoterule\relax
-
 % \newcommand{\colorhref}[2]{\href{#1}{\color{link}{#2}}}
 
 % Bibliography
-% \setbeamertemplate{bibliography item}{\insertbiblabel}
-% \setbeamercolor{bibliography entry author}{fg=primary}
-% \setbeamercolor{bibliography entry title}{fg=primary}
-% \setbeamercolor{bibliography entry location}{fg=primary}
-% \setbeamercolor{bibliography entry note}{fg=primary}
-% \setbeamercolor{bibliography item}{fg=primary}
+% これがないと参考文献の色が青くなる
+\setbeamertemplate{bibliography item}{\insertbiblabel}
+\setbeamercolor{bibliography entry author}{fg=primary}
+\setbeamercolor{bibliography entry title}{fg=primary}
+\setbeamercolor{bibliography entry location}{fg=primary}
+\setbeamercolor{bibliography entry note}{fg=primary}
+\setbeamercolor{bibliography item}{fg=primary}
