--- a/beamerouterthemetitech.sty
+++ b/beamerouterthemetitech.sty
@@ -10,6 +10,14 @@
 % ページをまたぐ場合に、表題の末尾にインデックスをつけない
 \setbeamertemplate{frametitle continuation}{}
 
+% footnoteの上のruleを消す
+% relaxはなにもしない命令
+\let\footnoterule\relax
+% https://tex.stackexchange.com/questions/96501/what-does-relax-do
+\setbeamertemplate{footnote}{%
+  \insertfootnotemark\insertfootnotetext %\par
+}
+
 % footlineはouter
 % https://www.beamer.plus/Inner-Themes-Outer-Themes-Templates.html
 \setbeamertemplate{footline}{
