--- a/beamerthemetitech.sty
+++ b/beamerthemetitech.sty
@@ -14,10 +14,11 @@
 % mathrm=symがないと数式中\sinがLMになった。mainfontと同じになるらしい
 % mathrm=sym,mathup=sym,mathit=sym,mathsf=sym,mathbf=sym,mathtt=sym
 \RequirePackage[mathrm=sym]{unicode-math}
-\usepackage[backend=biber, style=ieee]{biblatex}
+\RequirePackage{biblatex}
 % \RequirePackage{amsmath}
 \usecolortheme{titech}
 \usefonttheme{titech}
 \useoutertheme{titech}
 \useinnertheme{titech}
-\mode<all>
+
+% \mode<all>
