--- a/beamerinnerthemetitech.sty
+++ b/beamerinnerthemetitech.sty
@@ -33,8 +33,13 @@
 }
 
 % Itemize
+% 記号
 \setbeamercolor{itemize item}{fg=primary}
 \setbeamertemplate{itemize item}{$\circ$}
+\setbeamercolor{itemize subitem}{fg=primary}
+\setbeamertemplate{itemize subitem}{$\circ$}
+\setbeamercolor{description item}{fg=primary}
+\setbeamercolor{enumerate item}{fg=primary}
 
 % Footnote
 
@@ -56,3 +61,5 @@
 \setbeamercolor{bibliography entry location}{fg=primary}
 \setbeamercolor{bibliography entry note}{fg=primary}
 \setbeamercolor{bibliography item}{fg=primary}
+
+
