--- a/main.bib
+++ b/main.bib
@@ -12,3 +12,15 @@
   publisher = {KADOKAWA},
   year      = {2024}
 }
+@book{terasaka,
+  author    = {寺阪 英孝},
+  title     = {非ユークリッド幾何の世界 新装版},
+  publisher = {講談社},
+  year      = {2014}
+}
+@online{euclid,
+author = {Richard Fitzpatrick},
+title = {EUCLID’S ELEMENTS OF GEOMETRY},
+url = {https://farside.ph.utexas.edu/Books/Euclid/Elements.pdf},
+year = {2008}
+}
