--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
   {\large 型理論の関連分野に興味もってもらう}
   \par
   \vspace{16pt}
-  参考資料の著者が参照される分野
+  参考資料が関係する分野
   \begin{itemize}
   \item 論理学
   \item 集合論
@@ -71,26 +71,63 @@
     \end{center}
   \end{column}  
 \end{columns}
-\blfootnote{図は\href{https://www.forbeginnersbooks.com/product-page/philosophy-for-beginners}{Philosophy for beginners}より}
+\blfootnote{図はPhilosophy for beginners\supercite{philosophy-for-begginers}より} 
 \end{frame}
 \begin{frame}
   \frametitle{ユークリッドの原論}
   {\large 幾何学が定義、公理、公準、命題、証明に整理された}
+  \par
+  \vspace{16pt}
+  具体例
+  \begin{description}
+  \item[定義1] 点とは部分をもたないもの
+  \item[定義2] 線は幅のない長さ
+  \item[定義3] 面は長さと幅だけをもつもの
+  \item[公理5] 全体は部分より大きい
+  \item[命題5] 二等辺三角形の底辺はたがいに等しい
+  \end{description}
   % ユークリッドはギリシア数学の知識を5つの公準から
 \end{frame}
 \begin{frame}
   \frametitle{5つの公準}
-  {\large 5番目の平行線の公準はほかよりも複雑}
+  {\large 5番目の平行線の公準は複雑}
+  \par
+  \vspace{16pt}  
+  \begin{enumerate}
+  \item 任意の点から任意の点に直線を引くこと
+  \item 有限な線分を連続して直線に延長すること
+  \item 任意の点と半径で円を描くこと
+  \item すべての直角は等しいこと
+  \item 二直線が一直線と交わるとき、同じ側にできる内角の和が\\二直角よりも小さいなら二直線はその側に延長すると交わる
+  \end{enumerate}
 \end{frame}
-\begin{frame}
+\begin{frame}[t]
   \frametitle{公準5の別名は平行線公理}
-  {\large 任意の直線とその直線外の任意の一点があるとき、その一点を通りその直線に平行な直線は1本だけ}
+  {\large 任意の直線と直線外の任意の一点があるとき\\一点を通り直線に平行な直線は1本だけ}
+  \blfootnote{図は『数学の世界史』\supercite{suugaku-no-sekaishi}より}
+  \begin{figure}
+    \includegraphics[width=0.7\textwidth]{images/axiom5.png}
+    \caption{平行線と直線}
+  \end{figure}
 \end{frame}
 \begin{frame}
   \frametitle{平行線公理への疑問}
-  {\large 平行線公理は必要な公準か}
-  たんなる仮説なのか
-  ほかの公準から導出できるか
+  {\large 平行線公理をほかの公準から証明できるか}
+  \begin{itemize}
+  \item ほかの公準からの証明を試みる
+    \begin{itemize}
+    \item アラビア世界ではハイタム(965-1039)やハイヤーミー(1048 – 1131)
+    \item サッケーリ(1667ー1733), ルシャンドル(1752-1833)は独立に\\
+      平行線公理がないと三角形の内角の和は二直角以下になると証明
+    \end{itemize}
+  \item 平行線公理を否定しても、ほかの公準と矛盾しない
+    \begin{itemize}
+    \item ガウス(1777-1855)は平行線の公理は証明できないことを示唆する手紙を残す
+    \item ロバチェフスキー(1792-1856)とボヤイ(1802-1860)が独立に平行線を二本以上ひけても矛盾しない非ユークリッド幾何学を発見
+    \end{itemize}
+  \end{itemize}
+  % たんなる仮説なのか
+  % ほかの公準から導出できるか
 % 直線$l$上にない任意の点$P$を通る直線$l$の平行線は2本以上ある
 \end{frame}
 \begin{frame}
