--- a/beamerouterthemetitech.sty
+++ b/beamerouterthemetitech.sty
@@ -12,11 +12,12 @@
 
 % footnoteの上のruleを消す
 % relaxはなにもしない命令
-\let\footnoterule\relax
 % https://tex.stackexchange.com/questions/96501/what-does-relax-do
-\setbeamertemplate{footnote}{%
-  \insertfootnotemark\insertfootnotetext %\par
-}
+\let\footnoterule\relax
+
+% footnoteの左側からの距離を調整
+% https://tex.stackexchange.com/questions/493437/remove-footnote-indent-for-beamer
+\addtobeamertemplate{footnote}{\hskip -0.04\paperwidth}{}
 
 % footlineはouter
 % https://www.beamer.plus/Inner-Themes-Outer-Themes-Templates.html
@@ -25,9 +26,3 @@
   \hfill\insertframenumber\hspace{0.05\paperwidth}
   \vspace{0.025\paperheight}
 }
-% \usebeamercolor[highlight]{page number in head/foot}
-% \beamertemplatenavigationsymbolsempty
-% set a bigger font for the page number
-% \setbeamerfont{page number in head/foot}{fg=highlight}
-% print only the frame number in the footline
-% \setbeamertemplate{footline}[frame number]
