--- a/main.bib
+++ b/main.bib
@@ -24,3 +24,32 @@ title = {EUCLID’S ELEMENTS OF GEOMETRY},
 url = {https://farside.ph.utexas.edu/Books/Euclid/Elements.pdf},
 year = {2008}
 }
+@book{hajimete,
+  author    = {上垣 渉},
+  title     = {はじめて読む 数学の歴史},
+  publisher = {ベレ出版},
+  year      = {2006}
+}
+@book{structure,
+  author    = {橋爪 大三郎},
+  title     = {はじめての構造主義},
+  publisher = {講談社},
+  year      = {1988}
+}
+@book{miyaoka,
+  author    = {宮岡 礼子},
+  title     = {曲がった空間の幾何学 現代の科学を支える非ユークリッド幾何とは},
+  publisher = {講談社},
+  year      = {2017}
+}
+@online{espistemology,
+title = {Epistemology of Geometry},
+url = {https://plato.stanford.edu/entries/epistemology-geometry/},
+year = {2021}
+}
+@online{espistemology,
+title = {The Early Development of Set Theory},
+url = {https://plato.stanford.edu/entries/settheory-early/},
+year = {20214
+}
+
