--- a/main.tex
+++ b/main.tex
@@ -114,13 +114,13 @@
   \frametitle{平行線公理への疑問}
   {\large 平行線公理をほかの公準から証明できるか}
   \begin{itemize}
-  \item ほかの公準からの証明を試みる
+  \item ほかの公準からの証明できないか
     \begin{itemize}
     \item アラビア世界ではハイタム(965-1039)やハイヤーミー(1048 – 1131)
     \item サッケーリ(1667ー1733), ルシャンドル(1752-1833)は独立に\\
       平行線公理がないと三角形の内角の和は二直角以下になると証明
     \end{itemize}
-  \item 平行線公理を否定しても、ほかの公準と矛盾しない
+  \item 平行線公理を否定しても残りの公準と矛盾しない
     \begin{itemize}
     \item ガウス(1777-1855)は平行線の公理は証明できないことを示唆する手紙を残す
     \item ロバチェフスキー(1792-1856)とボヤイ(1802-1860)が独立に平行線を二本以上ひけても矛盾しない非ユークリッド幾何学を発見
@@ -131,16 +131,32 @@
 % 直線$l$上にない任意の点$P$を通る直線$l$の平行線は2本以上ある
 \end{frame}
 \begin{frame}
-  \frametitle{例 球面幾何学の平行線}
-  {\large 測地線があたえられるとき、その測地線にない点pをとおり測地線と交わらない測地線はない}
-  たんなる仮説なのか
-  ほかの公準から導出できるか
-\end{frame}
-\begin{frame}
-  \frametitle{非ユークリッド幾何学の発見の影響}
-  {\large 「正しさ」は仮定した公理から作りだすもの}
+  \frametitle{非ユークリッド空間の例}
+  % {\large 測地線があたえられるとき、その測地線にない点pをとおり測地線と交わらない測地線はない}
+  {\large 球面の大円は必ず交わる}
+  \blfootnote{図は『はじめての構造主義』\supercite{structure}より}
+  \begin{figure}
+    \includegraphics[width=0.5\textwidth]{images/non-euclid.png}
+    \caption{非ユークリッド空間の例}
+  \end{figure}
+  \begin{itemize}
+  \item 大円は中心を通る球の切断面
+  \item 大円はユークリッド幾何学の直線にあたる
+  \end{itemize}
 \end{frame}
 \section{素朴な集合論と記号論理学}
+\begin{frame}
+  \frametitle{非ユークリッド幾何学の影響}
+  {\large 正しさは仮定した公理から作りだすもの}
+  \begin{itemize}
+  \item 空間をふくめた数学の対象は公理から構築するものになる
+  \item ユークリッド幾何学が正しいと思えるのは素朴な知覚の認識に合うから
+    \begin{itemize}
+    \item 原論の直線や平面の定義はあいまい
+    \end{itemize}
+  \item 数学の対象を構築する道具としてデデキントとカントールは集合論を確立
+  \end{itemize}
+\end{frame}
 \begin{frame}
   \frametitle{ものの集まりで数学を考える}
   {\large いろんな数学の概念を集合で定義できる}
