--- a/main.bib
+++ b/main.bib
@@ -50,6 +50,17 @@ year = {2021}
 @online{espistemology,
 title = {The Early Development of Set Theory},
 url = {https://plato.stanford.edu/entries/settheory-early/},
-year = {20214
+year = {2024}
 }
-
+@book{set-theory,
+  author    = {竹内 外史},
+  title     = {新装版 集合とはなにか―はじめて学ぶ人のために},
+  publisher = {講談社},
+  year      = {2001}
+}
+@book{universal,
+  author    = {Martin Davis},
+  title     = {The Universal Computer: The Road from Leibniz to Turing},
+  publisher = {CRC Press},
+  year      = {2018}
+}
