--- a/main.bib
+++ b/main.bib
@@ -64,3 +64,10 @@ year = {2024}
   publisher = {CRC Press},
   year      = {2018}
 }
+@book{leibniz,
+  author    = {Maria Rosa Antognazza},
+  title     = {Leibniz: A Very Short Introduction},
+  publisher = {Oxford University Press},
+  year      = {2016}
+}
+
