--- a/main.tex
+++ b/main.tex
@@ -221,7 +221,19 @@
 \begin{frame}
   \frametitle{ブールの論理代数}
   {\large ブールは命題に出現する個体の集合を記号で表した}
-  % https://archive.org/stream/THELAWSOFTHOUGHTGeorgeBoole/THE%20LAWS%20OF%20THOUGHT_George%20Boole_djvu.txt
+  \begin{columns}
+    \begin{column}{0.7\textwidth}
+      \begin{quotation}
+         Let us then agree to represent the class of individuals to which a particular name or description is applicable, by a single letter, as x. If the name is “men,” for instance, let x represent “all men,”
+      \end{quotation}
+    \end{column}    
+    \begin{column}{0.2\textwidth}
+      \begin{figure}
+        \includegraphics[width=1\textwidth]{images/bool.png}
+      \end{figure}       
+    \end{column} 
+  \end{columns}
+  \blfootnote{図は``The Universal Computer: The Road from Leibniz to Turing''より}
 \end{frame}
 \begin{frame}
   \frametitle{推論規則の例}
