--- a/main.bib
+++ b/main.bib
@@ -70,4 +70,10 @@ year = {2024}
   publisher = {Oxford University Press},
   year      = {2016}
 }
+@online{bool,
+  title = {THE LAWS OF THOUGHT},
+  author ={George Boole},
+  url = {https://plato.stanford.edu/entries/settheory-early/},
+  year = {1854}
+}
 
