--- a/beamerinnerthemetitech.sty
+++ b/beamerinnerthemetitech.sty
@@ -40,7 +40,7 @@
 \setbeamertemplate{itemize subitem}{$\circ$}
 \setbeamercolor{description item}{fg=primary}
 \setbeamercolor{enumerate item}{fg=primary}
-
+\setbeamercolor{enumerate subitem}{fg=primary}
 % Footnote
 
 % remove navigation symbols 
