--- a/main.bib
+++ b/main.bib
@@ -76,4 +76,8 @@ year = {2024}
   url = {https://plato.stanford.edu/entries/settheory-early/},
   year = {1854}
 }
-
+@online{type-theory,
+  title = {Type Theory},
+  url = {https://plato.stanford.edu/entries/type-theory/},
+  year = {2022}
+}
