--- a/beamerfontthemetitech.sty
+++ b/beamerfontthemetitech.sty
@@ -1,9 +1,10 @@
 % BoldFontなどの設定参照 https://texdoc.org/serve/fontspec/0
 % \setmainjfont[BoldFont=HiraMinPro-W6]{HiraMinPro-W3}
-\setsansfont{Helvetica Neue}
+%\setsansfont{Helvetica Neue}
 % ゴシック体をデフォルトにする別の方法
 %\renewcommand{\kanjifamilydefault}{\gtdefault}
 %\renewcommand{\emph}[1]{{\upshape\bfseries #1}}
+%\setmainjfont{Hiragino Sans}
 \setmainjfont{Hiragino Sans}
 % \setmainjfont{A-OTF Shin Go Pro}
 \setmathfont{STIX Two Math}
