--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
   {\large 型理論に関わる分野の紹介}
   \par
   \vspace{16pt}
-  参考資料が関係する分野
+  参考資料に関わる分野
   \begin{itemize}
   \item 論理学
   \item 集合論
@@ -43,26 +43,26 @@
 \section{幾何学}
 \begin{frame}
   \frametitle{ギリシアで発展した幾何学}
-  {\large 幾何学の知識は証明された定理の集積}
+  {\large 幾何学の知識は\textcolor{highlight}{証明}\footnote{作図を証明とすることもあった。ギリシア語の「証明する」という単語(デイクニュミ)には「図示する」という意味もある。demostrationの語源}された定理の集積}
 \begin{columns}
   \begin{column}{0.25\textwidth}
     \begin{center}
-      \includegraphics[width=0.8\textwidth]{images/thales.png}
+      \includegraphics[width=0.7\textwidth]{images/thales.png}
     \end{center}
   \end{column}
   \begin{column}{0.25\textwidth}
     \begin{center}
-      \includegraphics[width=0.8\textwidth]{images/plato.png}
+      \includegraphics[width=0.7\textwidth]{images/plato.png}
     \end{center}
   \end{column}
   \begin{column}{0.25\textwidth}
     \begin{center}
-      \includegraphics[width=0.8\textwidth]{images/pythagoras.png}
+      \includegraphics[width=0.7\textwidth]{images/pythagoras.png}
     \end{center}
   \end{column}
   \begin{column}{0.25\textwidth}
     \begin{center}
-      \includegraphics[width=0.8\textwidth]{images/pythagoras2.png}
+      \includegraphics[width=0.7\textwidth]{images/pythagoras2.png}
     \end{center}
   \end{column}  
 \end{columns}
@@ -70,7 +70,7 @@
 \end{frame}
 \begin{frame}
   \frametitle{ユークリッドの原論}
-  {\large 幾何学が定義、公理、公準、命題、証明に整理された}
+  {\large 幾何学が定義、公理、公準\footnote{公理は量などの一般対象の前提、公準は幾何学の対象の前提}、命題、証明に整理された}
   \par
   \vspace{16pt}
   具体例
@@ -78,14 +78,15 @@
   \item[定義1] 点とは部分をもたないもの
   \item[定義2] 線は幅のない長さ
   \item[定義3] 面は長さと幅だけをもつもの
-  \item[公理5] 全体は部分より大きい
+  \item[公理5] \textcolor{highlight}{全体は部分より大きい}
   \item[命題5] 二等辺三角形の底辺はたがいに等しい
   \end{description}
+  
   % ユークリッドはギリシア数学の知識を5つの公準から
 \end{frame}
 \begin{frame}
   \frametitle{5つの公準}
-  {\large 5番目の平行線の公準は複雑}
+  {\large 5番目の公準は複雑}
   \par
   \vspace{16pt}  
   \begin{enumerate}
@@ -93,21 +94,21 @@
   \item 有限な線分を連続して直線に延長すること
   \item 任意の点と半径で円を描くこと
   \item すべての直角は等しいこと
-  \item 二直線が一直線と交わるとき、同じ側にできる内角の和が\\二直角よりも小さいなら二直線はその側に延長すると交わる
+  \item \textcolor{highlight}{二直線が一直線と交わるとき、同じ側にできる内角の和が\\二直角よりも小さいなら二直線はその側に延長すると交わる}
   \end{enumerate}
 \end{frame}
 \begin{frame}[t]
   \frametitle{公準5の別名は平行線公理}
-  {\large 任意の直線と直線外の任意の一点があるとき\\一点を通り直線に平行な直線は1本だけ}
+  {\large 公準5を換言すると任意の直線と直線外の任意の一点があるとき一点を通り\textcolor{highlight}{直線に平行な直線は1本}だけ}
   \blfootnote{図は『数学の世界史』\supercite{suugaku-no-sekaishi}より}
   \begin{figure}
     \includegraphics[width=0.7\textwidth]{images/axiom5.png}
-    \caption{平行線と直線}
+    \caption{平行線と平行線にない点$p$を通る直線}
   \end{figure}
 \end{frame}
 \begin{frame}
   \frametitle{平行線公理への疑問}
-  {\large 平行線公理をほかの公準から証明できるか}
+  {\large 平行線公理は真理か}
   \begin{itemize}
   \item ほかの公準からの証明できないか
     \begin{itemize}
@@ -115,7 +116,7 @@
     \item サッケーリ(1667ー1733), ルシャンドル(1752-1833)は独立に\\
       平行線公理がないと三角形の内角の和は二直角以下になると証明
     \end{itemize}
-  \item 平行線公理を否定しても残りの公準と矛盾しない
+  \item \textcolor{highlight}{平行線公理を否定しても残りの公準と矛盾しない}
     \begin{itemize}
     \item ガウス(1777-1855)は平行線の公理は証明できないことを示唆する手紙を残す
     \item ロバチェフスキー(1792-1856)とボヤイ(1802-1860)が独立に平行線を二本以上ひけても矛盾しない非ユークリッド幾何学を発見
@@ -144,17 +145,19 @@
   \frametitle{非ユークリッド幾何学の影響}
   {\large 正しさは仮定した公理から作りだすもの}
   \begin{itemize}
-  \item 空間をふくめた数学の対象は公理から構築するものにかわる
-  \item ユークリッド幾何学が正しいと思えるのは素朴な知覚の認識に合うから
+  \item 空間を含む数学の対象は公理から構築するものになる
     \begin{itemize}
+    \item ユークリッド幾何学を正しく感じるのは\\素朴な視覚の経験に合うから
     \item 原論の直線や平面の定義はあいまい
     \end{itemize}
-  \item 数学の対象を構築する道具としてデデキントとカントールは集合論を確立
+  \item 数学の対象を定義する道具としてデデキントとカントールは\textcolor{highlight}{集合論}を確立
   \end{itemize}
 \end{frame}
 \begin{frame}
   \frametitle{ものの集まりで数学を考える}
-  {\large 空集合から出発して対象を集合で定義できる}
+  {\large 空集合だけで対象を定義できる}
+  \par
+  例
   \begin{enumerate}
   \item 空集合$\phi$を$\{x|x\neq x\}$とする
   \item $\phi$を$0$となづける
