--- a/main.tex
+++ b/main.tex
@@ -176,9 +176,9 @@
   \begin{columns}
     \begin{column}{0.8\textwidth}
       \begin{itemize}
-      \item 「概念記法(Begriffsschrift)」で述語論理を提案
+      \item 「概念記法」で\textcolor{highlight}{述語論理}を提案
       \item 「算術の基本法則」で概念記法と集合論による算術の公理と定理を提案
-      \item 語にはsenseとreferenceがあると提起
+      \item ``On Sense and Reference''で語にはsenseとreferenceがあると提起
         \begin{itemize}
         \item 明けの明星と宵の明星のreferenceは金星
         \item 「金星は明けの明星である」と「金星は金星である」のsenseは違う
@@ -202,7 +202,7 @@
       \begin{itemize}
         \item 今日で使う微積分学の記法
         \item 二進数
-        \item characteristica universalis
+        \item \textcolor{highlight}{characteristica universalis}
           \begin{itemize}
           \item 単語を構成するアルファベットのような思考の記号体系
           \item 代数的な記号操作で推論
@@ -226,7 +226,7 @@
       \begin{center}
         THE LAWS OF THOUGHT\supercite{bool}より引用
         \begin{quotation}
-          Let us then agree to represent the class of individuals to which a particular name or description is applicable, by a single letter, as x. If the name is “men,” for instance, let x represent “all men,”
+          Let us then agree to represent \textcolor{highlight}{the class of individuals to which a particular name or description is applicable, by a single letter, as x}. If the name is “men,” for instance, let x represent “all men,”
         \end{quotation}
       \end{center}
     \end{column}    
@@ -281,14 +281,16 @@
   \UnaryInfC{$\bot$}
   \RightLabel{(背理法)}
   \UnaryInfC{$\varphi$}
-  \DisplayProof  
+  \DisplayProof
+  \par
+  $\varphi,$, $\psi$は真偽値をとる命題。
 \end{frame}
 \begin{frame}
   \frametitle{概念記法}
-  {\large フレーゲは述語の言明を形式化した}
+  {\large フレーゲは述語による言明を形式化した}
   \begin{itemize}
-  \item 「$\varphi$が〜である」言明を、引数$\varphi$を真偽値に写像する述語$P(\varphi)$を命題論理に加える
-  \item 「任意の$\phi$について」という普遍量化子$\forall$と、「ある$x$について」という存在量化子$\exists$も加える
+  \item 「$\varphi$が〜である」という言明を引数$\varphi$を真偽値に写像する述語$P(\varphi)$をとして命題論理に加える
+  \item \textcolor{highlight}{「任意の$\phi$について」という普遍量化子$\forall$と、「ある$x$について」という存在量化子$\exists$も加える}
   \item たとえば「家にいるペットは犬か猫だ」という命題は$\forall x. P(x) \rightarrow D(x)\vee C(x)$のように表せる
   \item 複雑な命題を単純な命題の組合せで表現しやすくなる
   \end{itemize}
@@ -308,31 +310,31 @@
 \end{frame}
 \begin{frame}
   \frametitle{ラッセルのパラドクス}
-  {\large 集合の集合を考えると矛盾がおきる}
+  {\large \textcolor{highlight}{集合の集合}を考えると矛盾がおきる}
+  \begin{enumerate}
+  \item 自分自身を元にもたない集合すべての集合を\\$R=\{x|x\notin x \}$とする
+  \item $R$が自分を元にもたない集合とすると定義から\\$R$は$R$の元になる
+  \item $R$が自分を元にもつ集合とすると定義から\\$R$は$R$の元ではない
+  \end{enumerate}  
+\end{frame}
+\begin{frame}
+  \frametitle{「算術の基本法則」でのラッセルのパラドクス}
+  {\large 原因は公理V: \textcolor{highlight}{$\epsilon P=\epsilon Q \equiv \forall x [P(x)\equiv Q(x)]$}}
   \begin{itemize}
-  \item ラッセルのパラドクス
+  \item 公理Vは述語の同一である条件
+  \item $\epsilon P$は述語$P$を充足する集合 
     \begin{enumerate}
-    \item 自分自身を元にもたない集合すべての集合を$R=\{x|x\notin x \}$とする
-    \item $R$が自分を元にもたない集合とすると、定義から$R$は$R$の元になる
-    \item $R$が自分を元にもつ集合とすると、定義から$R$は$R$の元ではない
-    \end{enumerate}
-  \item 算術の基本法則では、第五公理$\epsilon P=\epsilon Q \equiv \forall x [P(x)\equiv Q(x)]$がパラドクスを招く
-    \begin{itemize}
-    \item 公理は述語の同一である条件
-    \item $\epsilon P$は述語$P$を充足する集合
-    \end{itemize}
-      \begin{enumerate}
     \item $R$を述語論理で$\exists P[x=\epsilon P\wedge \neg P(x)]$と表せる
     \item $x$を$\epsilon R$とすると$R(\epsilon R)\equiv\neg R(\epsilon R)$となる
     \end{enumerate}
-  \item ラッセルが述語論理の述語は述語をとれない規則のような階層構造でパラドクスの解消を試みたのが型理論のはじまり
+  \item 型理論のはじまりは、述語論理の述語は述語をとれない規則のような階層構造でラッセルがパラドクスの解消を試みたこと
   \end{itemize}
 \end{frame}
-\begin{frame}
-  \frametitle{型の概念}
-  ラッセルの自分自身に言明する述語の例に対して、フレーゲは述語は述語を引数にとれないと回答した
-  ただし述語の外延が作用する
-\end{frame}
+% \begin{frame}
+%   \frametitle{型の概念}
+%   ラッセルの自分自身に言明する述語の例に対して、フレーゲは述語は述語を引数にとれないと回答した
+%   ただし述語の外延が作用する
+% \end{frame}
 % https://fair-use.org/bertrand-russell/the-principles-of-mathematics/s498
 % https://plato.stanford.edu/entries/type-theory/
 % https://people.umass.edu/klement/pom/pom-portrait.pdf
